--- a/components/postlistcard/postlistcard.wxml
+++ b/components/postlistcard/postlistcard.wxml
@@ -2,7 +2,8 @@
 <wxs src="../../utils/tools.wxs" module="tools">
 </wxs>
 <view>
-	<view class="card">
+	<view class="card {{animation?'moveup':''}}" bindtap="routeToContentPage" data-card="{{cardData}}" id="{{elId}}" style="top:-{{elTop}}px;z-index:{{repose ? repose :''}}">
+
 		<image src="{{cardData.image}}"></image>
 		<view class="info">
 			<view class="leibie">
