--- a/components/postlistcard/postlistcard.wxss
+++ b/components/postlistcard/postlistcard.wxss
@@ -1,11 +1,15 @@
 /* components/postlistcard/postlistcard.wxss */
 .card{
   position: relative;
+  transition: all 0.8s;
+  top: 0px;
+  width: 100vw;
   /* display: flex; */
 }
 .card image{
   vertical-align: bottom;
   filter: brightness(0.7);
+  width: 100%;
 }
 .card .info{
   position: absolute;
@@ -22,4 +26,8 @@
 .card .info .title{
   font-size: 14px;
   color: white;
+}
+.card.moveup{
+  top:-270px;
+  z-index: 9999;
 }
