--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -1,13 +1,93 @@
 <!--pages/main/main.wxml-->
-<van-tabs active="{{ active }}" bind:change="onChange" animated>
+<van-tabs active="{{ active }}" bind:change="onChange" animated class="nav">
 	<!-- <van-tab title="">
 		<van-icon name="calender-o"></van-icon>
 	</van-tab> -->
 
-	<van-tab title="发现">
+	<van-tab title="发现" class="find">
+		<view class="findContent" hidden="{{postsHidden}}">
+			<view class="page-section page-section-spacing swiper">
+				<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" indicator-color="{{indicator_color}}" indicator-active-color="{{indicator_active_color}}">
+					<swiper-item wx:for="{{findCateList.banner.list}}" bind:tap="routeToFindCardContentPage">
+						<image src="{{item.image}}"></image>
+					</swiper-item>
+				</swiper>
+			</view>
+			<view class="content">
+				<view class="title">{{findCateList.today.selection_title}}</view>
+				<FindPageCard selectionData="{{item}}" wx:for="{{findCateList.today.list}}" bind:mask-show="isMaskShow" bind:show-content="getShowContent" bind:trans-post-data="getPostData" elDown="{{elTop}}"></FindPageCard>
+				<view class="title">{{findCateList.hot.selection_title}}</view>
+				<FindPageCard selectionData="{{item}}" wx:for="{{findCateList.hot.list}}" bind:mask-show="isMaskShow" bind:show-content="getShowContent" bind:trans-post-data="getPostData" elDown="{{elTop}}"></FindPageCard>
+				<!-- 专题 -->
+				<wxs src="../../utils/tools.wxs" module="tools"></wxs>
+				<view class="page-section page-section-spacing swiper">
+					<view class="title">{{findCateList.album.selection_title}}</view>
+					<swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}" indicator-color="{{indicator_color}}" indicator-active-color="{{indicator_active_color}}">
+						<swiper-item wx:for="{{findCateList.album.list}}" class="swipter-item" bind:tap="routeToFindCardContentPage">
+							<image src="{{item.image}}"></image>
+							<view class="info">
+								<view class="type">{{findCateList.album.selection_title}}</view>
+								<!-- <view class="time">{{tools.parseCates(item.cates)}} / {{tools.parseTime(item.duration)}}</view> -->
+								<view class="albumTitle">{{item.title}}</view>
+								<view class="desc">{{item.app_fu_title}}</view>
+							</view>
+						</swiper-item>
+					</swiper>
+				</view>
+				<!-- <FindPageCard selectionData="{{findCateList.album}}">
+				<view class="title">{{findCateList.album.selection_title}}</view>
+			</FindPageCard> -->
+				<view class="title">{{findCateList.posts.selection_title}}</view>
+				<FindPageCard selectionData="{{item}}" wx:for="{{findCateList.posts.list}}" bind:mask-show="isMaskShow" bind:show-content="getShowContent" bind:trans-post-data="getPostData" elDown="{{elTop}}"></FindPageCard>
+				<view wx:for="{{posts}}">
+					<view class="title">{{item.selection_title}}</view>
+					<FindPageCard selectionData="{{item}}" wx:for="{{item.list}}" bind:mask-show="isMaskShow" bind:show-content="getShowContent" bind:trans-post-data="getPostData" elDown="{{elTop}}"></FindPageCard>
+				</view>
 
+				<!-- <FindPageCard selectionData="{{posts}}" wx:for="{{}}"><view class="title">{{findCateList.posts.selection_title}}</view> </FindPageCard> -->
+				<view class="loading" hidden="{{scrollLoading}}" wx:if="{{!postsHidden}}">
+					<van-loading color="#1989fa" size="16px" class="loadingBar" text-size="14px">正在加载...</van-loading>
+				</view>
+				<view class="loading" hidden="{{!isEnd}}">
+					<text >没有更多内容了</text>
+				</view>
+			</view>
+		</view>
+		<view hidden="{{!postsHidden}}">
+			<view class="image">
+				<view class="prev"><van-icon name="arrow-left" bindtap="backFindPage"/></view>
+				<image src="{{postData.image}}" hidden="{{postsHidden}}"></image>
+				<video id="myVideo" object-fit="fill" style="width:100%" poster="{{postData.image}}" src="https://api.kele8.cn/pic/{{postData.content_video[0].progressive[postData.content_video[0].progressive.length-1].url}}" show-center-play-btn='{{ture}}' show-play-btn="{{true}}" controls vx:if="{{postData}}"></video>
+			</view>
+			<view class="text-content" wx:if="{{postData}}">
+				<view class="title">{{postData.title}}</view>
+				<view class="fenlei">{{postData.cate[0]}} / {{tools.parseTime(postData.duration)}}</view>
+				<view class="intro">{{postData.intro}}</view>
+				<view class="author" vx:if="postData.author">
+					<image src="{{postData.author.profile.avatar}}"></image>
+					<view class="author-info">
+						<view class="author-name">{{postData.author.profile.username}}</view>
+						<view class="roles">{{postData.author.roles}}</view>
+					</view>
+				</view>
+				<view wx:for="{{postData.relate_video}}">
+
+					<view class="v-title">{{item.name}}</view>
+
+					<scroll-view class="scroll-view_H" scroll-x="true" bindscroll="scroll" style="width: 100%">
+						<!-- <view id="demo1" class="scroll-view-item_H demo-text-1">1</view>
+				<view id="demo2" class="scroll-view-item_H demo-text-2">2</view>
+				<view id="demo3" class="scroll-view-item_H demo-text-3">3</view> -->
+						<view wx:for="{{item.list}}" id="demo1" class="scroll-view-item_H">
+							<image src="{{item.image}}"></image>
+						</view>
+					</scroll-view>
+				</view>
+			</view>
+		</view>
+		<!-- <FindPageCard>热门</FindPageCard> -->
 	</van-tab>
-	<van-tab title="频道">
+	<van-tab title="频道" class="channel">
 		<van-grid column-num="2" border="{{ false }}" gutter="0" square>
 			<van-grid-item use-slot data-cateid="{{item.cateid?item.cateid:''}}" wx:for="{{cateList}}" wx:key="index" bindtap="routeToPostList" data-tab="{{item.tab ? item.tab : ''}}">
 				<image style="width: 100%;" fit="cover" src="{{item.icon}}" />
@@ -15,7 +95,8 @@
 			</van-grid-item>
 		</van-grid>
 	</van-tab>
-	<van-tab title="我的" bind:tap="toAboutMePage()">我的</van-tab>
+	<van-tab title="我的" bind:tap="toAboutMePage()" class="aboutme">我的</van-tab>
+	<view class="mask" hidden="{{maskShow}}"></view>
 </van-tabs>
 <!-- <van-button type="primary" bind:click="onClickShow">显示遮罩层</van-button> -->
 <van-overlay show="{{ show }}" bind:click="onClickHide">
